# qudi-core

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  AUTHORS.md  DEVELOPMENT.md  PYSIDE6_UPGRADE.md  README.md  VERSION  calculate_documentation_coverage.py  count_python_errors.py  flake.nix  justfile  pyproject.toml  setup.py
.direnv/: flake-profile-1-link
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  bug_report.yml  feature_request.yml  suggestion.yml
.github/workflows/: ci.yml  release_pypi.yml  release_test_pypi.yml  ruff.yml  test.yml
docs/: 404.html  404.md  404.rst  COPYRIGHT  Makefile  _config.yml  changelog.md  changelog.rst  conf.py  data_storage.md  getting_started.md  getting_started.rst  hardware_with_multiple_interfaces.md  index.md  index.rst  license.md  license.rst  requirements-docs.txt
docs/api_reference/: index.rst
docs/api_reference/_autosummary/: qudi.core.Base.rst  qudi.core.ConfigOption.rst  qudi.core.Connector.rst  qudi.core.GuiBase.rst  qudi.core.LogicBase.rst  qudi.core.StatusVar.rst  qudi.core.get_logger.rst  qudi.core.rst  qudi.gui.rst  qudi.gui.taskrunner.main_window.TaskMainWindow.rst  qudi.gui.taskrunner.main_window.rst  qudi.gui.taskrunner.rst  qudi.gui.taskrunner.task_runner_gui.TaskRunnerGui.rst  qudi.gui.taskrunner.task_runner_gui.rst  qudi.gui.taskrunner.taskwidget.TaskWidget.rst  qudi.gui.taskrunner.taskwidget.rst  qudi.logic.rst  qudi.logic.taskrunner.TaskRunnerLogic.rst  qudi.logic.taskrunner.rst  qudi.runnable.main.rst  qudi.runnable.rst  qudi.tasks.rst  qudi.tasks.test_tasks.TestTask.rst  qudi.tasks.test_tasks.TestTask2.rst  qudi.tasks.test_tasks.rst  qudi.tools.config_editor.config_editor.ConfigurationEditor.rst  qudi.tools.config_editor.config_editor.main.rst  qudi.tools.config_editor.config_editor.rst  qudi.tools.config_editor.custom_widgets.CustomConnectorsWidget.rst  qudi.tools.config_editor.custom_widgets.CustomItemsWidget.rst  qudi.tools.config_editor.custom_widgets.CustomOptionsWidget.rst  qudi.tools.config_editor.custom_widgets.rst  qudi.tools.config_editor.global_editor.GlobalEditorWidget.rst  qudi.tools.config_editor.global_editor.rst  qudi.tools.config_editor.global_widgets.CustomOptionsWidget.rst  qudi.tools.config_editor.global_widgets.GlobalConfigWidget.rst  qudi.tools.config_editor.global_widgets.GlobalOptionsWidget.rst  qudi.tools.config_editor.global_widgets.RemoteServerWidget.rst  qudi.tools.config_editor.global_widgets.rst  qudi.tools.config_editor.module_editor.ModuleEditorWidget.rst  (+214 more)
docs/core/: index.rst
docs/core_elements/: data_storage.md  data_storage.rst
docs/design_concepts/: config_options.md  config_options.rst  configuration.md  configuration.rst  connectors.md  connectors.rst  hardware_interface.md  hardware_interface.rst  index.rst  logging.md  logging.rst  measurement_modules.md  measurement_modules.rst  remote_modules.md  remote_modules.rst  status_variables.md  status_variables.rst
docs/development/: index.rst
docs/getting_started/: getting_started.md  index.rst
docs/gui/: index.rst
docs/logic/: index.rst
docs/programming guidelines/: data_fitting_integration.md  hardware_with_multiple_interfaces.md  index.md
docs/programming_guidelines/: code_style.md  creating_releases.md  creating_releases.rst  data_fitting_integration.md  data_fitting_integration.rst  hardware_with_multiple_interfaces.md  hardware_with_multiple_interfaces.rst
docs/setup/: installation.md  installation.rst  jupyter.md  jupyter.rst  startup.md  startup.rst
docs/tasks/: index.rst
docs/templates/: custom-class-template.rst  custom-module-template.rst
docs/templates/autosummary/: class.rst  module.rst
docs/tools/: index.rst
docs/util/: index.rst
qudi/: __init__.py  __main__.py  runnable.py
qudi/core/: __init__.py  __main__.py  application.py  config.py  configoption.py  connector.py  interface.py  meta.py  module.py  modulemanager.py  parentpoller.py  qudikernel.py  servers.py  services.py  statusvariable.py  threadmanager.py  watchdog.py
qudi/core/gui/: gui.py
qudi/core/logger/: __init__.py  handlers.py  records_model.py
qudi/core/scripting/: modulescript.py  moduletask.py
qudi/gui/: testgui.py  testgui2.py
qudi/gui/taskrunner/: main_window.py  task_runner_gui.py  taskwidget.py
qudi/hardware/: interface_test_hardware.py  testhardware.py  testhardware2.py
qudi/interface/: test_interface.py
qudi/logic/: interface_test_logic.py  taskrunner.py  testlogic.py  testlogic2.py
qudi/tasks/: test_tasks.py
qudi/tools/config_editor/: __init__.py  __main__.py
qudi/util/: colordefs.py  datafitting.py  datastorage.py  filters.py  helpers.py  mapper.py  math.py  models.py  mutex.py  network.py  overload.py  parameters.py  paths.py  uic.py  units.py  yaml.py
qudi/util/fit_models/: exp_decay.py  gaussian.py  helpers.py  linear.py  lorentzian.py  model.py  poissonian.py  sine.py
qudi/util/widgets/: advanced_dockwidget.py  colorbar.py  fitting.py  literal_lineedit.py  loading_indicator.py  parameter_editor.py  scan_1d_widget.py  scan_2d_widget.py  scientific_spinbox.py  slider.py  toggle_switch.py
src/: exception.cfg
src/qudi/: cleanup.py  configure.py  core_demo.cfg  runnable.py
src/qudi/core/: __init__.py  __init__.py,cover  __main__.py  application.py  application.py,cover  config.py  configoption.py  configoption.py,cover  connector.py  connector.py,cover  default.cfg  (+25 more)
src/qudi_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: .coverage  .coveragerc  conftest.py  test.cfg  test_ManagedModule.py  test_application_gui.py  test_application_no_gui.py  test_modulemanager.py  test_modules_coverage.py  test_modules_coverage_all.py
tests/fit_methods/: test_exp_decay.py  test_gaussian.py  test_lorentzian.py  test_sine.py
tests/notebooks/: debug.ipynb  matplotlib.ipynb  mpl_crash.ipynb  shutdown.ipynb
tests/utils/: .coverage  test_datafitting.py
tools/: find-gitpath.bat  find-pypath.bat  install-qudi.bat
(+204 files in other folders)
