[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qudi-core"
description = "A modular measurement application framework"
version = "1.5.1.dev0"
readme = "README.md"
keywords = [
    'qudi',
    'diamond',
    'quantum',
    'confocal',
    'automation',
    'experiment',
    'measurement',
    'framework',
    'lab',
    'laboratory',
    'instrumentation',
    'instrument',
    'modular',
]
license = { text = "LGPLv3" }
classifiers = [
    'Development Status :: 5 - Production/Stable',

    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications',
    'Environment :: MacOS X',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',

    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',

    'Natural Language :: English',

    'Operating System :: Microsoft :: Windows :: Windows 8',
    'Operating System :: Microsoft :: Windows :: Windows 8.1',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',

    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: User Interfaces',
]
dependencies = [
    "wheel>=0.37.0",
    "cycler>=0.10.0",
    "entrypoints>=0.3",
    "fysom>=2.1.6",
    "GitPython>=3.1.24",
    "jupyter>=1.0.0",
    "jupytext>=1.13.0",
    "lmfit>=1.0.3",
    "matplotlib>=3.4.3",
    "numpy>=1.21.3",
    "pyqtgraph>=0.13.0",
    "PySide2==5.15.2.1",
    "rpyc>=5.0.1",
    "ruamel.yaml>=0.17.16",
    "scipy>=1.7.1",
    "jsonschema>=4.2.1",
    "opencv-python-headless"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["qudi.artwork"]

[tool.setuptools.package-dir]
"" = "src"



[tool.setuptools.package-data]
"qudi" = [
    "artwork/icons/*",
    "artwork/icons/**/*",
    "artwork/icons/**/**/*",
    "artwork/styles/*",
    "artwork/styles/**/*",
    "artwork/styles/**/**/*",
    "artwork/logo/*"
]


[project.optional-dependencies]
dev-docs = [
    "Sphinx==7.2.6",
    "numpydoc==1.6.0",
    "sphinx-rtd-dark-mode==1.3.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-book-theme==1.0.1"
    "pydata_sphinx_theme==0.15.4"
]

dev-lint-format = ["ruff==0.2.1",]

dev-test = [
    "pytest==8.0.1",
    "pytest-qt",
    "coverage"
]

[project.scripts]
qudi = 'qudi.runnable:main'
qudi-config-editor = 'qudi.tools.config_editor.config_editor:main'
qudi-uninstall-kernel = 'qudi.core.qudikernel:uninstall_kernel'
qudi-install-kernel = 'qudi.core.qudikernel:install_kernel'


[tool.ruff]
select = ["D102", "D103", "D105"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

# "sphinx-book-theme==1.1.1"
# nbsphinx = "^0.8.8"
# "pydata_sphinx_theme==0.15.4"
