[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "qudi-core"
dynamic = ["version"]
description = "A modular measurement application framework"
readme = "README.md"
keywords = [
    "qudi",
    "diamond",
    "quantum",
    "confocal",
    "automation",
    "experiment",
    "measurement",
    "framework",
    "lab",
    "laboratory",
    "instrumentation",
    "instrument",
    "modular",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",

    "Natural Language :: English",

    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",

    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = [
    "cycler>=0.12.1",
    "entrypoints>=0.4",
    "fysom>=2.1.6",
    "GitPython>=3.1.45",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pyqtgraph>=0.14.0",
    "PySide6>=6.10.1",
    "rpyc>=5.0.1, <6",
    "ruamel.yaml>=0.18.16",
    "scipy>=1.15.3",
    "jsonschema>=4.25.1",
    "qtconsole>=5.7.0",
]

[project.optional-dependencies]
dev-lint-format = ["ruff==0.7.0",]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
    "ERA001",  # Commented-out code
    "SLF001",  # Private member accessed
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
    "C901",  # Init method too complex
]

[project.scripts]
qudi = "qudi.runnable:main"
qudi-config-editor = "qudi.tools.config_editor.config_editor:main"
qudi-uninstall-kernel = "qudi.core.qudikernel:uninstall_kernel"
qudi-install-kernel = "qudi.core.qudikernel:install_kernel"

[project.urls]
Homepage = "https://github.com/Ulm-IQO/qudi-core"
Documentation = "https://ulm-iqo.github.io/qudi-core/"
Repository = "https://github.com/Ulm-IQO/qudi-core.git"
"Bug Tracker" = "https://github.com/Ulm-IQO/qudi-core/issues"
Changelog = "https://github.com/Ulm-IQO/qudi-core/blob/main/docs/changelog.md"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
